--- a/xero/src/inventory/Cargo.toml
+++ b/xero/src/inventory/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ic-cdk = "0.6"
+ic-cdk-macros = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
