--- a/xero/src/inventory/Cargo.toml
+++ b/xero/src/inventory/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ic-cdk = "0.6"
-ic-cdk-macros = "0.6"
+candid = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+ic-cdk = "0.6"
+ic-cdk-macros = "0.6"
+
