--- a/xero/src/inventory/Cargo.toml
+++ b/xero/src/inventory/Cargo.toml
@@ -8,3 +8,11 @@ ic-cdk = "0.6.10"
 ic-cdk-macros = "0.6.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+candid = "0.8"
+chrono = "0.4"  # Added for time logging
+
+[lib]
+crate-type = ["cdylib"]
+
+[target.wasm32-unknown-unknown]
+linker = "rust-lld"
