--- a/xero/Cargo.toml
+++ b/xero/Cargo.toml
@@ -1,4 +1,3 @@
 [workspace]
-members = [ "src/data_aggregator", "src/inventory"
-]
+members = [ "src/data_aggregator", "src/inventory"]
 resolver = "2"
