--- a/xero/src/inventory/Cargo.toml
+++ b/xero/src/inventory/Cargo.toml
@@ -3,18 +3,19 @@ name = "inventory"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 ic-cdk = "0.6.10"
 ic-cdk-macros = "0.6.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 candid = "0.8"
-chrono = "0.4"  # Added for time logging
-
-[lib]
-crate-type = ["cdylib", "rlib"]
+time = { version = "0.3.36", features = ["formatting"] }
 
 
-[target.wasm32-unknown-unknown]
-linker = "wasm-ld"
 
+
+# [target.wasm32-unknown-unknown]
+# linker = "wasm-ld"
