--- a/xero/package.json
+++ b/xero/package.json
@@ -14,5 +14,11 @@
   "type": "module",
   "workspaces": [
     "src/xero_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/agent": "^2.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
+  }
 }
