--- a/xero/src/data_aggregator/Cargo.toml
+++ b/xero/src/data_aggregator/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 ic-cdk = "0.6.10"
 ic-cdk-macros = "0.6.10"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+csv = "1.1"
 candid = "0.8"
+
+
 
 [lib]
 crate-type = ["cdylib"]
