--- a/xero/Cargo.toml
+++ b/xero/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = [ "src/data_aggregator", "src/inventory", "src/ledger"]
+members = [ "src/data_aggregator", "src/inventory", "src/ledger", "src/price_engine"]
 resolver = "2"
