--- a/xero/Cargo.toml
+++ b/xero/Cargo.toml
@@ -1,3 +1,11 @@
 [workspace]
 members = [ "src/data_aggregator", "src/inventory", "src/ledger", "src/price_engine"]
 resolver = "2"
+
+[workspace.dependencies]
+candid = "0.9.9"
+ic-cdk = "0.11.3"
+ic-cdk-macros = "0.8.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
