--- a/xero/src/data_aggregator/Cargo.toml
+++ b/xero/src/data_aggregator/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ic-cdk = "0.6.10"
-ic-cdk-macros = "0.6.10"
+ic-cdk = "0.11.3"
+ic-cdk-macros = "0.8.1"
+candid = { version = "0.9.9", features = ["parser"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 csv = "1.1"
-candid = "0.8"
-
-
 
 [lib]
 crate-type = ["cdylib"]
