--- a/xero/src/xero_frontend/tsconfig.node.json
+++ b/xero/src/xero_frontend/tsconfig.node.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "strict": true
   },
   "include": ["vite.config.ts"]
 } 
