--- a/xero/src/xero_frontend/package.json
+++ b/xero/src/xero_frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@dfinity/auth-client": "^2.1.3",
+    "@phosphor-icons/react": "^2.1.7",
     "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
