--- a/xero/src/xero_frontend/package.json
+++ b/xero/src/xero_frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@dfinity/auth-client": "^2.1.3",
     "@phosphor-icons/react": "^2.1.7",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.0.1"
   },
