--- a/xero/package.json
+++ b/xero/package.json
@@ -20,5 +20,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/node": "^22.10.0",
+    "dotenv": "^16.4.5"
   }
 }
