--- a/xero/src/xero_frontend/package.json
+++ b/xero/src/xero_frontend/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dfinity/agent": "^2.1.3",
     "@dfinity/auth-client": "^2.1.3",
+    "@dfinity/principal": "^2.1.3",
     "@phosphor-icons/react": "^2.1.7",
+    "@types/node": "^22.10.1",
     "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
